some fixes, few new translatins

--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -135,7 +135,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TRAIT_A_DARK_PALL_TITLE</zType>
-		<Translation><![CDATA[Ein düsteres Sagtuch]]></Translation>
+		<Translation>Ein düsteres Sagtuch</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TRAIT_DUEL_OF_FATES_TITLE</zType>
@@ -159,7 +159,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TRAIT_A_CHILL_IN_THE_PALACE_TITLE</zType>
-		<Translation><![CDATA[Ein Kälteschauer im Schloss]]></Translation>
+		<Translation>Ein Kälteschauer im Schloss</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_TRAIT_FACING_THE_HORDE_TITLE</zType>
@@ -1693,7 +1693,7 @@ It seems that your quick thinking has saved you on this occassion, but what will
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_RUINS_EMERALD_MINES_CAVE_IN_TITLE</zType>
-		<Translation><![CDATA[Eingestürzt!]]></Translation>
+		<Translation>Eingestürzt!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_RUINS_EMERALD_MINE_REBUILT_TITLE</zType>
@@ -2017,7 +2017,7 @@ It seems that your quick thinking has saved you on this occassion, but what will
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_CONTACT_A_LEARNING_OPPORTUNITY_TITLE</zType>
-		<Translation><![CDATA[Eine Lern Möglichkeit]]></Translation>
+		<Translation>Eine Lern Möglichkeit</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_CONTACT_BORDER_DISPUTE_TITLE</zType>
@@ -2357,7 +2357,7 @@ It seems that your quick thinking has saved you on this occassion, but what will
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_A_FRIEND_IN_NEED_TITLE</zType>
-		<Translation>CDATA[Ein Freund in Nöten</Translation>
+		<Translation>Ein Freund in Nöten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_ROAD_TO_HEAVEN_TITLE</zType>
