--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -496,7 +496,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_ROMANTIC</zType>
-		<Translation>Romantisch</Translation>
+		<Translation>Romantiker</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_ROMANTIC_GAIN_1</zType>
@@ -552,7 +552,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_WANTON</zType>
-		<Translation>Schamlos</Translation>
+		<Translation>Lüstern</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_WANTON_GAIN_1</zType>
