--- a/Translations/German/text-game-change.xml
+++ b/Translations/German/text-game-change.xml
@@ -477,7 +477,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_ADD_X</zType>
-		<Translation>Erstelle {0}</Translation>
+		<Translation>Bekomme {0}</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_CITIZENS</zType>
