--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1708,7 +1708,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_TWO_LIGHT_CHARIOT</zType>
-		<Translation>Kontrolliere zwei ink(UNIT_LIGHT_CHARIOT,2)</Translation>
+		<Translation>Kontrolliere zwei link(UNIT_LIGHT_CHARIOT,2)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_TWO_KUSHITE_CAVALRY</zType>
