--- a/Translations/German/text-playerOption-change.xml
+++ b/Translations/German/text-playerOption-change.xml
@@ -19,7 +19,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_INSTANT_UNIT_MOVEMENT</zType>
-		<Translation>Sofrtige Einheitenbewegung</Translation>
+		<Translation>Sofortige Einheitenbewegung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_INSTANT_UNIT_MOVEMENT_DESC</zType>
